Resolves: fdo#34635 GetSelectEntry is far more likely correct